--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server covid-data.json -w -p 3333",
+    "server-copy": "json-server covid-data-copy.json -w -p 3333"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.1",
+    "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
+    "json-server": "^0.17.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-google-charts": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
